2009-03-17  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/murrine_draw.c (murrine_draw_menuitem):
	I guess this should fix menuitems with roundness = 1, even if I haven't
	seen those bugs (but the code now seems correct).

2009-03-17  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/murrine_style.c (murrine_style_draw_flat_box),
	(murrine_style_draw_shadow), (murrine_style_draw_box_gap),
	(murrine_style_draw_box), (murrine_style_draw_shadow_gap),
	(murrine_style_draw_focus):
	Started reducing duplicated params.corners initializations.
	Could break something, but it shouldn't.

2009-03-17  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* configure.ac:
	Started working on 0.90.1.

2009-03-17  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* TODO:
	* src/murrine_draw.c (murrine_draw_scrollbar_slider):
	* src/murrine_draw_rgba.c (murrine_rgba_draw_scrollbar_slider):
	Fixed the rendering bug on the scrollbar's slider by reducing the 
	roundness of the clipped area.

2009-03-17  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/murrine_style.c (murrine_style_draw_box):
	Removed shadows from comboboxentry's button.
	Feedback is appreciated.

2009-03-17  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/murrine_style.c (murrine_style_draw_box):
	Changed params.active heuristic for toggle button, I should ask benzea 
	for more info.

2009-03-16  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* configure.ac:
	Ops 0.90.0 not 0.90.

2009-03-16  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* configure.ac:
	* src/cairo-support.c:
	* src/cairo-support.h:
	* src/murrine_draw.c (murrine_draw_button), (murrine_draw_entry):
	Renamed 0.90, removed set_border_gradient for this release.

2009-03-10  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/cairo-support.c (murrine_set_gradient),
	(murrine_set_border_gradient):
	* src/cairo-support.h:
	* src/murrine_draw.c (murrine_draw_button), (murrine_draw_entry),
	(murrine_draw_entry_progress), (murrine_register_style_murrine):