@@ -247,11 +247,15 @@ static void
 murrine_draw_entry (cairo_t *cr,
                     const MurrineColors    *colors,
                     const WidgetParameters *widget,
+                    const FocusParameters  *focus,
                     int x, int y, int width, int height)
 {
 	const MurrineRGB *base = &colors->base[widget->state_type];
-	const MurrineRGB *border = &colors->shade[widget->disabled ? 4 : 6];
+	MurrineRGB border = colors->shade[widget->disabled ? 4 : 6];
 	int radius = CLAMP (widget->roundness, 0, 3);
+
+	if (widget->focus)
+		border = focus->color;
 
 	cairo_translate (cr, x+0.5, y+0.5);
 
@@ -266,14 +270,17 @@ murrine_draw_entry (cairo_t *cr,
 	/* Draw the focused border */
 	if (widget->focus)
 	{
+		MurrineRGB focus_shadow;
+		murrine_shade (&border, 1.54, &focus_shadow);
+
 		cairo_rectangle (cr, 2, 2, width-5, height-5);
-		murrine_set_color_rgba (cr, &colors->spot[1], 0.5);
+		murrine_set_color_rgba (cr, &focus_shadow, 0.5);
 		cairo_stroke(cr);
 	}
 	else if (widget->mrn_gradient.gradients)
 	{
 		MurrineRGB shadow;
-		murrine_shade (border, 0.925, &shadow);
+		murrine_shade (&border, 0.925, &shadow);
 
 		cairo_move_to (cr, 2, height-3);
 		cairo_line_to (cr, 2, 2);
@@ -284,7 +291,7 @@ murrine_draw_entry (cairo_t *cr,
 	}
 
 	/* Draw the border */
-	murrine_set_color_rgb (cr, widget->focus ? &colors->spot[2] : border);
+	murrine_set_color_rgb (cr, &border);
 	murrine_rounded_rectangle (cr, 1, 1, width-3, height-3, radius, widget->corners);
 	cairo_stroke (cr);
 }
