@@ -1,3 +1,11 @@
+2009-03-18  Andrea Cimitan  <andrea.cimitan@gmail.com>
+
+	* src/murrine_draw.c (murrine_draw_entry):
+	* src/murrine_draw_rgba.c (murrine_rgba_draw_entry):
+	* src/murrine_style.c (murrine_style_draw_shadow):
+	* src/murrine_types.h:
+	Use focus->color in draw_entry.
+
 2009-03-17  Andrea Cimitan  <andrea.cimitan@gmail.com>
 
 	* src/murrine_draw.c (murrine_draw_menuitem):
